Fix #253 Add Part02/Step02 to the project.  Updated the project to pass the DataRepository to the individual parts to allow for data carry over from one part of the test to the next.